--- a/viewer/src/containers/ImageEditor.css
+++ b/viewer/src/containers/ImageEditor.css
@@ -1,5 +1,4 @@
 .Home .lander {
-    padding: 80px 0;
     text-align: center;
   }
   
@@ -7,7 +6,8 @@
     font-family: "Open Sans", sans-serif;
     font-weight: 600;
   }
-  
-  .Home .lander p {
-    color: #999;
+
+  .content-border {
+    border-right: 1px solid #333;
+    height: 1000px;
   }
